# ManhwaStudio

./: .gitignore  AGENTS.md  Cargo.toml  MODULE_README.md  NOTICE  README.md  README_AGENT.md  ai_backend.py  build.rs  config.py  mainV2.py  one_click.py  qt_runner.py  requirements.txt  text_render_test.py  Запустить.Linux.sh  Запустить.MacOS.command  Запустить.Windows.bat  Командная строка.Linux.sh  Командная строка.MacOS.command  Командная строка.Windows.bat  Открыть окружение.Linux.sh  Открыть окружение.MacOS.command  Открыть окружение.Windows.bat  Установить.Linux.sh  Установить.MacOS.command
.cargo/: config.toml
crates/ms-gifs/: Cargo.toml  MODULE_README.md
crates/ms-gifs/src/: error.rs  lib.rs  typing.rs
crates/ms-gifs/tests/: assets_decode.rs
crates/ms-i18n/: Cargo.toml  MODULE_README.md
crates/ms-i18n/locales/: en.json  es.json  fr.json  pt.json  ru.json
crates/ms-i18n/src/: catalog.rs  error.rs  interpolate.rs  lib.rs  locale.rs  plural.rs
crates/ms-i18n/tests/: key_validation.rs  migrated_keys_resolve.rs
crates/ms-log/: Cargo.toml
crates/ms-log/src/: runtime_log.rs  trace.rs
crates/ms-onnx/: Cargo.toml  MODULE_README.md
crates/ms-onnx/src/: lib.rs
crates/ms-onnx/src/manga_ocr/: MODULE_README.md  beam.rs  mod.rs  postprocess.rs  preprocess.rs  tokenizer.rs
crates/ms-onnx/src/paddle_ocr/: MODULE_README.md  crop.rs  ctc.rs  db_postprocess.rs  dict.rs  glyph_mask.rs  mod.rs  preprocess.rs
crates/ms-onnx/tests/: manga_ocr_e2e.rs  paddle_ocr_e2e.rs
crates/ms-storage/: Cargo.toml  MODULE_README.md
crates/ms-storage/src/: lib.rs  mem.rs  native.rs  passthrough.rs  path.rs
crates/ms-storage/tests/: backends.rs  passthrough.rs
crates/ms-text-render/: Cargo.toml
crates/ms-text-util/: MODULE_README.md
crates/ms-thread/: Cargo.toml
crates/ms-thread/src/: lib.rs
docs/: README.es.md  README.fr.md  README.pt.md  README.ru.md
egui-docs/: 00-version-map.md  01-app-shell.md  02-painting.md  03-input.md  04-widgets.md  05-ids-and-i18n.md  06-overlays.md  07-inspection.md  README.md  VERSION
egui-docs/api/: README.md  ecolor.md  eframe.md  egui.md  egui_extras.md  emath.md  epaint.md  symbols.txt
lama_files/: inpainter.py  inpainter_v2.py
modules/: MODULE_README.md  ai_device.py  browser_f.py  downloader.py  lama_mpe.py  manhwa_merge.py  model_manager_qt.py  project.py  psd_import.py  smart_hyphenate.py  utils_qt.py
modules/ai_backend/: MODULE_README.md  __init__.py  aot_inpaint_service.py  base.py  ctd_text_detector_service.py  device_service.py  easy_ocr_service.py  flux_fill_inpaint_service.py  lama_inpaint_service.py  lama_mpe_inpaint_service.py  lama_v2_runtime_inpainter.py  machine_translation_service.py  manga_ocr_service.py  model_manager.py  paddle_ocr_service.py  paddle_onnx_runtime.py  paddle_text_detector_service.py  paddle_vl_ocr_service.py  reline_service.py  rocm_runtime.py  script_constraint.py  sdxl_inpaint_service.py  server.py  surya_ocr_service.py  surya_text_detector_service.py  test_device_service.py  test_dispatcher.py  test_events.py  test_frame_server.py  test_frame_ws_server.py  test_framing.py  test_handlers_device.py  test_handlers_inpaint.py  test_handlers_ocr.py  test_handlers_reline.py  test_handlers_sdxl.py  test_handlers_textdetector.py  test_handlers_translate.py  test_health_snapshot.py  test_paddle_vl_ocr_service.py  (+6 more)
modules/new_project/: MODULE_README.md  __init__.py  adv_fetch_cli.py  adv_fetch_cloak_cli.py  common.py  downloaders.py  import_ops.py  save_ops.py  stitching.py  test_adv_fetch_cli.py  test_adv_fetch_cloak_cli.py  waifu2x.py  window.py
src/: MODULE_README.md  ai_backend_capabilities.rs  ai_backend_panel.rs  ai_backend_supervisor.rs  ai_install_probe.rs  ai_models.rs  app.rs  args.rs  bubble_status.rs  config.rs  general_settings_panel.rs  gpu_utils.rs  i18n_resolve.rs  input_manager_v2.rs  locale_store.rs  main.rs  memory_manager.rs  native_runtime.rs  paste_image.rs  project.rs  python_manager.rs  screen_capture.rs  settings_shared.rs  storage.rs  studio_bootstrap.rs  text_punctuation.rs  trace.rs  web_entry.rs
src/backend_ipc/: MODULE_README.md  client.rs  frame.rs  mod.rs  protocol.rs  transport.rs
src/canvas/: MODULE_README.md  bubble_aside_ui.rs  bubble_on_top_ui.rs  bubble_runtime.rs  helpers.rs  mod.rs  overlay_runtime.rs  scene.rs  settings.rs  types.rs  view_transform.rs  workers.rs
src/installer/: MODULE_README.md  install.rs  mod.rs  update.rs  utils.rs
src/launcher/: MODULE_README.md  app.rs  background.rs  first_run_language.rs  main_page.rs  mod.rs  psd_import_window.rs  state.rs  theme.rs  tutorial.rs
src/models/: MODULE_README.md  bubbles_model.rs  clean_assign.rs  clean_overlays_model.rs  mod.rs  text_mask_model.rs
src/onnx_runtime/: MODULE_README.md  builds.rs  manifest.rs  mod.rs  ort_manifest.json
src/page_ops/: MODULE_README.md  fs_exec.rs  json_remap.rs  mod.rs  plan.rs
src/tabs/: MODULE_README.md  characters.rs  mod.rs  notes.rs  terms.rs  wiki.rs
src/tools/: MODULE_README.md  mask_brush.rs  mod.rs
src/tutorial/: MODULE_README.md  controller.rs  engine.rs  id.rs  mod.rs  progress.rs  settings_pane.rs
src/widgets/: MODULE_README.md  ai_button.rs  autocomplete_line.rs  editable_combo_box.rs  font_preview.rs  help_hint.rs  mod.rs  seed_spin_box.rs  spellchecked_line.rs  text_edit_plus.rs  viewport_color_selector.rs  wheel_combo_box.rs  wheel_input_guard.rs  wheel_slider.rs  wheel_spin_box.rs
tools/: MODULE_README.md
tools/egui_docs/: MODULE_README.md  build.sh  check_sync.py  gen_api_index.py
ui_new/: MODULE_README.md  canvas_view.py  theme.py
ui_new/models/: bubbles_model.py  clean_overlays_model.py  text_detection_model.py
ui_new/tabs/: characters_tab.py  notes_tab.py  settings_tab.py  terms_tab.py  wiki.py
ui_new/tools/: __init__.py  aot_inpaint_tool.py  base.py  brush.py  eraser.py  stamp.py  (+7 more)
wiki/: 0-Установка.md  1-Лента картинок и её параметры.md  2-Вкладка Перевод.md  3-Вкладка Клининг.md  4-Вкладка Текст.md  5-Вкладка Персонажи.md  6-Вкладка Термины.md  7: Вкладка Заметки Перевода.md  Импорт-из-psd.md  Окно-Новый-проект.md
(+393 files in other folders)
