[package]
name = "ms-log"
version = "0.1.0"
edition = "2024"

# Standalone logging + tracing layer for ManhwaStudio.
# Depends only on the thread shim (for a wasm-compatible writer thread) — no
# dependency on the application crate.
[dependencies]
web-time = "1"
ms-thread = { path = "../ms-thread" }
